Some styles refactors to change common button color and size, change color of required symbol in input, change color of kebab dropdown button, change color and text of forgot password link, update text above checkout button. Covers next issues: #689, #692, #687, #693, #688, #686, #694

--- a/packages/venia-concept/src/components/Button/button.css
+++ b/packages/venia-concept/src/components/Button/button.css
@@ -1,18 +1,14 @@
 .root {
     composes: root from '../clickable.css';
-    background-color: white;
-    border: 1px solid currentColor;
-    border-radius: 1.5rem;
-    color: rgb(var(--venia-teal));
+    background-color: black;
+    border: 1px solid black;
+    border-radius: 100px;
+    color: white;
     font-size: 0.875rem;
-    height: 3rem;
-    min-width: 8.75rem;
+    height: 2.125rem;
+    min-width: 9rem;
     padding: 0 1.5rem;
     transition: opacity 256ms linear;
-}
-
-.root:hover {
-    background-color: rgb(var(--venia-teal-alt));
 }
 
 .root[disabled] {
